--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "supertest": "^6.2.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3"
   },
   "jest": {
